--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5418,9 +5418,18 @@ select {
     border-left-width: 1px;
   }
 
+  .md\:p-6 {
+    padding: 1.5rem;
+  }
+
   .md\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 }
 @media (min-width: 1024px) {
