--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1292,6 +1292,9 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
 .ml-5 {
   margin-left: 1.25rem;
 }
@@ -1310,11 +1313,14 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
 .mr-1 {
   margin-right: 0.25rem;
+}
+.ml-10 {
+  margin-left: 2.5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .block {
   display: block;
@@ -5189,6 +5195,14 @@ select {
 
   .sm\:mt-6 {
     margin-top: 1.5rem;
+  }
+
+  .sm\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
   }
 
   .sm\:block {
