--- a/public/css/app.css
+++ b/public/css/app.css
@@ -45,6 +45,9 @@ body {
   line-height: inherit; /* 2 */
 }
 
+[x-cloak] {
+    display: none !important;
+}
 /*
 1. Add the correct height in Firefox.
 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
